# weno_2d_torch

./: .gitignore  CMakeLists.txt  README.md  example.py  find_torch_include.py  main_1d.cpp  main_2d.cpp  netcdf_output.cpp  netcdf_output.h  setup.py  weno5_advection.cpp  weno5_advection.h
cmake/: cpuinfo.cmake  fmt.cmake
cmake/macros/: macro_add_shader.cmake
post_processing/: example_and_error.py
